feat: add BridgeModule for Paper and Velocity platforms, update module loading mechanism